--- a/css/style.css
+++ b/css/style.css
@@ -94,3 +94,35 @@ display: block;
   margin-left: auto;
   margin-right: auto;
 }
+
+
+.topnav-right {
+  float: right;
+}
+.box {
+  border: 1px solid;
+  padding: 10px;
+  /* width: 585px;
+  height: 346px; */
+  border:2px black solid;
+  background-color: black;
+  color: white;
+  /* margin: 150px; */
+  margin-top: -125px;
+  margin-bottom: 20px;
+}
+
+.redtext{
+  color: red;
+  text-transform: uppercase;
+}
+
+.whitetext{
+  color:white;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.card-body{
+background-color: black;
+}
